--- a/index.html
+++ b/index.html
@@ -5,23 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout</title>
 
-    <link rel="stylesheet" href="./styles.css">
-    <script src="./script.js"></script>
+
+    <link rel="stylesheet" href="./styles.css" />
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons" />
+
+    <script src="./logica-ivo.js" defer></script>
+
 </head>
 <body class="page">
-    <header>
-        <h1 class="header__title"> úLtimas Notifcas de IA</h1>
-        <div class="header__control">
-            <div class="control-group">
-                <label for="color-piker" class="control-header"></label>
-            </div>
-            <div class="control-group"> 
-                      
-            </div>
-            <div></div>
-        </div>
 
-    </header>
+    <header class="header">
+
+        <h1 class="header__title">Últimas Notícias de IA</h1>
+
+        <div class="header__controls">
+
+            <div class="control-group">
+
+                <label for="color-picker">Cor:</label>
+
+                <input type="color" id="color-picker" class="control-group__input" name="color-picker" />
+
+            </div><!--control-group-->
+
+            <div class="control-group">
+
+                <label for="font-select">FONTE:</label>
+                <select name="font-select" id="font-select" class="control-group__select">
+
+                    <option value="Roboto">Roboto</option>
+                    <option value="Open Sans">Open Sans</option>
+                    <option value="Montserrat">Montserrat</option>
+
+                </select><!--control-group__select-->
+
+            </div><!--control-group-->
+
+            <div class="control-group">
+
+                <label for="article-color-picker">Cor dos Artigos:</label>
+                <input type="color" name="article-color-picker" id="article-color-picker" class="control-group__input">
+                
+            </div><!--control-group-->
+
+            <button id="theme-toggle" class="header__theme-toggle">
+
+                <span class="material-icons">dark_mode</span>
+
+            </button>
+
+        </div><!--header__controls-->
+
+    </header><!--header-->
+
 
     <main>
         <article class="news">
